--- a/css/scss/_index.scss
+++ b/css/scss/_index.scss
@@ -41,7 +41,7 @@ header {
   
   // Projects
   
-  .home-projects {
+  .home-certs {
     background: #fff;
     background-size: cover;
     padding: 60px 10px;
